--- a/_gulp/_pug/1-services-index-2.pug
+++ b/_gulp/_pug/1-services-index-2.pug
@@ -60,6 +60,45 @@ html(lang="ru")
                   | — более 40 угревых элементов на коже лица — как правило, воспаленных, гнойных.
               p Для лечения кожи от угрей проводят пилинг — удаление поверхностных слоев кожи с помощью слабых растворов кислот (химический пилинг) или лазерный пилинг. Также для борьбы с угревой сыпью применяется чистка лица HydraFacial, и лазеротерапия на отдельные невоспаленные угри (CO2-лазер).
 
+            .one-services__gallery
+              .one-services__gallery-carousel
+                .look__carousel
+                  div
+                    .look__block
+                      .before-after
+                        img(src="./tmp/img-before.jpg", alt="")
+                        img(src="./tmp/img-after.jpg", alt="")
+                  div
+                    .look__block
+                      .before-after
+                        img(src="./tmp/img-before.jpg", alt="")
+                        img(src="./tmp/img-after.jpg", alt="")
+                  div
+                    .look__block
+                      .before-after
+                        img(src="./tmp/img-before.jpg", alt="")
+                        img(src="./tmp/img-after.jpg", alt="")
+
+                .look__btn
+                  button(type="button").look__btn-left left
+                  button(type="button").look__btn-right right
+                
+              .one-services__gallery-content
+                h3 
+                  i.icon-check-bold
+                  span Показание к процедуре
+                ul
+                  li Воспалительные элементы
+                  li Акне
+                  li Прыщи
+
+                h3 
+                  i.icon-plus-bold
+                  span Противопоказания
+                ul
+                  li Онкология
+                  li Беременность
+
             .one-services__what
               h2 Что входит в процедуру
               table
@@ -98,7 +137,8 @@ html(lang="ru")
                   tbody
                     tr
                       td Процедура
-                      td(align="right") 3 000 RUB
+                      td(align="right").nowrap
+                        span.span 3 000 RUB
                       td.last
                         i.icon-arrow-down.j-table-icon
                     tr.tr-content.j-table-content
@@ -106,7 +146,8 @@ html(lang="ru")
                         p Идейные соображения высшего порядка, а также новая модель организационной деятельности позволяет выполнять важные задания по разработке существенных финансовых и административных условий. Идейные соображения высшего порядка, а также новая модель организационной деятельности требуют от нас анализа существенных финансовых и административных условий. 
                     tr.tr-even
                       td Процедура
-                      td(align="right") 3 000 RUB
+                      td(align="right").nowrap
+                        span.span 3 000 RUB
                       td.last
                         i.icon-arrow-down.j-table-icon
                     tr.tr-content.j-table-content
@@ -114,7 +155,9 @@ html(lang="ru")
                         p Идейные соображения высшего порядка, а также новая модель организационной деятельности позволяет выполнять важные задания по разработке существенных финансовых и административных условий. Идейные соображения высшего порядка, а также новая модель организационной деятельности требуют от нас анализа существенных финансовых и административных условий. 
                     tr
                       td Процедура
-                      td(align="right") 3 000 RUB
+                      td(align="right").nowrap
+                        //- del 6 000 RUB
+                        span.span 3 000 RUB
                       td.last
                         i.icon-arrow-down.j-table-icon
                     tr.tr-content.j-table-content
@@ -122,7 +165,8 @@ html(lang="ru")
                         p Идейные соображения высшего порядка, а также новая модель организационной деятельности позволяет выполнять важные задания по разработке существенных финансовых и административных условий. Идейные соображения высшего порядка, а также новая модель организационной деятельности требуют от нас анализа существенных финансовых и административных условий. 
                     tr.tr-even
                       td Процедура
-                      td(align="right") 3 000 RUB
+                      td(align="right").nowrap
+                        span.span 3 000 RUB
                       td.last
                         i.icon-arrow-down.j-table-icon
                     tr.tr-content.j-table-content
