--- a/_gulp/_pug/_include/_footer-js.pug
+++ b/_gulp/_pug/_include/_footer-js.pug
@@ -4,3 +4,5 @@ script(src="./js/libs/jquery/jquery-migrate-3.0.1.min.js")
 script(src="./js/libs/magnific-popup/jquery.magnific-popup.min.js")
 script(src="./js/libs/jquery.maskedinput/jquery.maskedinput.min.js")
 script(src="./js/libs/slick/slick.min.js")
+script(src="./js/libs/twentytwenty/jquery.event.move.js")
+script(src="./js/libs/twentytwenty/jquery.twentytwenty.js")
