--- a/_gulp/_scss/main.scss
+++ b/_gulp/_scss/main.scss
@@ -71,6 +71,7 @@ $container-max-widths: (
 @import "../dist/js/libs/magnific-popup/magnific-popup.scss";
 @import "../dist/js/libs/slick/slick.scss";
 @import "../dist/js/libs/slick/slick-theme.scss";
+@import "../dist/js/libs/twentytwenty/twentytwenty.scss";
 @import "3-modules/_modules.scss";
 
 @import "4-utils/_clear.scss";
