--- a/_gulp/_pug/our-team.pug
+++ b/_gulp/_pug/our-team.pug
@@ -43,7 +43,7 @@ html(lang="ru")
               h1 
                 span Наша команда
 
-              nav.our-team__nav
+              nav.subcategories-nav
                 ul
                   li: a(href="#!") Косметология
                   li.active: a(href="#!") Маникюр и педикюр
