--- a/_gulp/_scss/3-modules/_modules.scss
+++ b/_gulp/_scss/3-modules/_modules.scss
@@ -945,37 +945,6 @@
       }
     }
   }
-  &__nav {
-    overflow: hidden;
-    overflow-x: scroll;
-    white-space: nowrap;
-    font-size: 0;
-    margin: 0 0 30px 0;
-    ul {
-      margin: 0;
-      padding: 0;
-      li {
-        margin: 0 10px 0 0;
-        list-style: none;
-        display: inline-block;
-        &>a, &>span {
-          font-size: rem(18px);
-          display: block;
-          text-decoration: none;
-          height: 45px;
-          line-height: 45px;
-          padding: 0 18px;
-          background: #F9F2ED;
-          font-weight: 500;
-        }
-        &.active {
-          &>a, &>span {
-            background: $add-color;
-          }
-        }
-      }
-    }
-  }
   &__block {
     padding: 0 20px;
     position: relative;
@@ -1072,19 +1041,6 @@
     }
   }
   @include media-breakpoint-up(xl) {
-    &__nav {
-      white-space: normal;
-      padding-bottom: 18px;
-      overflow: hidden;
-      ul {
-        li {
-          margin-bottom: 12px;
-          &>a, &>span {
-            padding: 0 30px;
-          }
-        }
-      }
-    }
     &__carousel {
       &>div {
         width: calc(33.3% - 20px);
@@ -1101,6 +1057,52 @@
         padding-bottom: 15px;
         padding-top: 15px;
         min-height: auto;
+      }
+    }
+  }
+}
+
+.subcategories-nav {
+  overflow: hidden;
+  overflow-x: scroll;
+  white-space: nowrap;
+  font-size: 0;
+  margin: 0 -10px 30px 0;
+  ul {
+    margin: 0;
+    padding: 0;
+    li {
+      margin: 0 10px 0 0;
+      list-style: none;
+      display: inline-block;
+      &>a, &>span {
+        font-size: rem(18px);
+        display: block;
+        text-decoration: none;
+        height: 45px;
+        line-height: 45px;
+        padding: 0 18px;
+        background: #F9F2ED;
+        font-weight: 500;
+      }
+      &.active {
+        &>a, &>span {
+          background: $add-color;
+        }
+      }
+    }
+  }
+  @include media-breakpoint-up(xl) {
+    white-space: normal;
+    padding-bottom: 18px;
+    overflow: hidden;
+    margin-right: 0;
+    ul {
+      li {
+        margin-bottom: 12px;
+        &>a, &>span {
+          padding: 0 30px;
+        }
       }
     }
   }
@@ -1922,6 +1924,16 @@
         width: 372px;
       }
     }
+    &__price {
+      &.--h2-v2 {
+        h2, .h2 {
+          &::before {
+            width: 386px;
+            left: 56px;
+          }
+        }
+      }
+    }
   }
   @include media-breakpoint-up(md) {
     &__block {
@@ -2041,6 +2053,16 @@
           right: auto;
           left: 0;
           bottom: 65px;
+        }
+      }
+    }
+    &__price {
+      &.--h2-v2 {
+        h2, .h2 {
+          &::before {
+            width: 546px;
+            top: 18px;
+          }
         }
       }
     }
