--- a/_gulp/_pug/gallery.pug
+++ b/_gulp/_pug/gallery.pug
@@ -18,7 +18,7 @@ html(lang="ru")
     .banner-row
       .container
         .banner-row__block
-          img(src="./tmp/banner-top-7.png", alt="").img-fluid
+          img(src="./tmp/banner-top-9.png", alt="").img-fluid
           h1 Фотогалерея
 
     // Content
@@ -44,6 +44,10 @@ html(lang="ru")
                 li: a(href="#!") 3Д визуализация
                 li: a(href="#!") Интерьер
                 li.active: a(href="#!") Наши работы
+
+            .content__document
+              p Таким образом сложившаяся структура организации позволяет оценить значение направлений прогрессивного развития. Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности представляет собой интересный эксперимент проверки модели развития. 
+              .clear20
 
             .gallery
               .gallery__row
