--- a/_gulp/_scss/3-modules/_modules.scss
+++ b/_gulp/_scss/3-modules/_modules.scss
@@ -2448,3 +2448,43 @@
     }
   }
 }
+
+.collapse {
+  &__head {
+    cursor: pointer;
+    min-height: 60px;
+    position: relative;
+    background: $add-color;
+    font-size: rem(18px);
+    line-height: 1.3;
+    padding: 19px 60px 17px 20px;
+    .icon-arrow-down {
+      width: 60px;
+      height: 60px;
+      font-size: rem(20px);
+      position: absolute;
+      top: 0;
+      right: 0;
+      text-align: center;
+      line-height: 60px;
+      transform-origin: 50%;
+      transform: rotate(0deg);
+    }
+    &.is-active {
+      .icon-arrow-down {
+        transform: rotate(-180deg);
+      }
+    }
+  }
+  &__content {
+    display: none;
+    &-wrapper {
+      padding: 20px 10px 20px 30px;
+      p {
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+}
