--- a/_gulp/_pug/contacts.pug
+++ b/_gulp/_pug/contacts.pug
@@ -41,6 +41,79 @@ html(lang="ru")
 
             .clear20
 
+            .contacts__row
+              .contacts__block.--first
+                h2 Адрес:
+                p Станция метро Свиблово (СВАО), Ул.Кольская, д.2, корп.5
+              .contacts__block.--second
+                h2 Телефон:
+                p 
+                  a(href="tel:") +7 499 189-81-22
+                  br
+                  a(href="tel:") +7 499 189-73-88
+              .contacts__block.--third
+                h2 Соцсети:
+                .social
+                  a(href="#!")
+                    img(src="./images/icon-social-1.svg", alt="")
+                  a(href="#!")
+                    img(src="./images/icon-social-2.svg", alt="")
+                  a(href="#!")
+                    img(src="./images/icon-social-3.svg", alt="")
+                  a(href="#!")
+                    img(src="./images/icon-social-4.svg", alt="")
+                  a(href="#!")
+                    img(src="./images/icon-social-5.svg", alt="")
+
+            .map
+              #map.map__container
+                img(src="./tmp/map-placeholder.png", alt="")
+              .map__img
+                img(src="./tmp/map.png", alt="")
+
+            .get-us
+              h2 Как к нам добраться?
+              .get-us__row
+                .get-us__block
+                  img(src="./images/contacts-img-1.png", alt="")
+                  h3 На атвомобиле
+                  p Транспортное сообщение Конаково Ривер Клабс Москвой обеспечивается: 
+                  ul
+                    li
+                      b Ленинградское шоссе 
+                      | (125 км от МКАД)
+                      br
+                      | Задача организации, в особенности же реализация намеченных плановых заданий играет важную роль
+                    li
+                      b Ленинградское шоссе 
+                      | (125 км от МКАД)
+                      br
+                      | Задача организации, в особенности же реализация намеченных плановых заданий играет важную роль
+                    li
+                      b Ленинградское шоссе 
+                      | (125 км от МКАД)
+                      br
+                      | Задача организации, в особенности же реализация намеченных плановых заданий играет важную роль
+                .get-us__block
+                  img(src="./images/contacts-img-2.png", alt="")
+                  h3 На общественном транспорте 
+                  ul
+                    li
+                      b Ленинградское шоссе 
+                      | (125 км от МКАД)
+                      br
+                      | Задача организации, в особенности же реализация намеченных плановых заданий играет важную роль
+                    li
+                      b Ленинградское шоссе 
+                      | (125 км от МКАД)
+                      br
+                      | Задача организации, в особенности же реализация намеченных плановых заданий играет важную роль
+                    li
+                      b Ленинградское шоссе 
+                      | (125 км от МКАД)
+                      br
+                      | Задача организации, в особенности же реализация намеченных плановых заданий играет важную роль
+
             .one-services__form.--contacts
               .one-services__form-wrapper
                 div.first.d-none.d-md-block
