--- a/_gulp/_pug/index.pug
+++ b/_gulp/_pug/index.pug
@@ -2,30 +2,86 @@ doctype
 
 html(lang="ru")
 
-  -var active = 'Новости и Акции' //активный пункт меню, список в header.jade
-  -var pageTitle = 'Новости и Акции' + ' - Визави. Центр эстетики и красоты' //title страницы для генерации верстки
+  -var active = 'Главная' //активный пункт меню, список в header.jade
+  -var pageTitle = 'Главная' + ' - Визави. Центр эстетики и красоты' //title страницы для генерации верстки
 
   include ./_include/_head
 
-  body
+  body.no-bg
 
     // Preloader
     include ./_include/_preloader
 
     include ./_include/_header
 
-    // Banner row
-    .banner-row
-      .container
-        .banner-row__block
-          img(src="./tmp/banner-top-1.png", alt="").img-fluid
-          .h1 Главная
-
     // Content
     .content
-      .container
+      
+      // Advantages
+      .advantages
+        .container
+          h2 Наши преимущества
 
-        p test
+      // Services
+      .services
+        .container
+          h2 Наши услуги
+
+      // About
+      .about
+        .container
+          h2 О нас
+
+      // View
+      .view
+        .container
+          h2 Загляните в наши соцсети
+
+      // Popular
+      .popular
+        .container
+          h2 Популярные процедуры
+
+          .popular__carousel
+            div
+              .popular__block
+                .popular__block-thumb
+                  a(href="#!")
+                    img(src="./tmp/popular-img-1.png", alt="")
+                .popular__block-content
+                  h3 Маникюр
+                  p Правильный выбор масла по проблеме. Различные масла имеют разный состав и применяются для ...
+                  a(href="#!").popular__block-more подробнее
+            div
+              .popular__block.--second
+                .popular__block-thumb
+                  a(href="#!")
+                    img(src="./tmp/popular-img-2.png", alt="")
+                .popular__block-content
+                  h3 Маникюр
+                  p Правильный выбор масла по проблеме. Различные масла имеют разный состав и применяются для ...
+                  a(href="#!").popular__block-more подробнее
+            div
+              .popular__block.--third
+                .popular__block-thumb
+                  a(href="#!")
+                    img(src="./tmp/popular-img-3.png", alt="")
+                .popular__block-content
+                  h3 Маникюр
+                  p Правильный выбор масла по проблеме. Различные масла имеют разный состав и применяются для ...
+                  a(href="#!").popular__block-more подробнее
+            div
+              .popular__block
+                .popular__block-thumb
+                  a(href="#!")
+                    img(src="./tmp/popular-img-1.png", alt="")
+                .popular__block-content
+                  h3 Маникюр
+                  p Правильный выбор масла по проблеме. Различные масла имеют разный состав и применяются для ...
+                  a(href="#!").popular__block-more подробнее
+
+
+          a(href="#!").btn.popular__btn Все процедуры
 
     include ./_include/_footer
     //- div(style="height: 1000px; background-color: #000")
