--- a/_gulp/_pug/index.pug
+++ b/_gulp/_pug/index.pug
@@ -27,6 +27,51 @@ html(lang="ru")
         .container
           h2 Наши услуги
 
+        .services__bottom
+          .container-fluid
+
+            .services__carousel
+              div
+                .services__block
+                  a(href="#!")
+                    img(src="./tmp/services-list-img-1.png", alt="")
+                    span.services__block-title Дерматолог
+              div
+                .services__block
+                  a(href="#!")
+                    img(src="./tmp/services-list-img-2.png", alt="")
+                    span.services__block-title Косметолог
+              div
+                .services__block
+                  a(href="#!")
+                    img(src="./tmp/services-list-img-3.png", alt="")
+                    span.services__block-title Мужчинам
+              div
+                .services__block
+                  a(href="#!")
+                    img(src="./tmp/services-list-img-4.png", alt="")
+                    span.services__block-title Флеболог
+              div
+                .services__block
+                  a(href="#!")
+                    img(src="./tmp/services-list-img-1.png", alt="")
+                    span.services__block-title Дерматолог
+              div
+                .services__block
+                  a(href="#!")
+                    img(src="./tmp/services-list-img-2.png", alt="")
+                    span.services__block-title Косметолог
+              div
+                .services__block
+                  a(href="#!")
+                    img(src="./tmp/services-list-img-3.png", alt="")
+                    span.services__block-title Мужчинам
+              div
+                .services__block
+                  a(href="#!")
+                    img(src="./tmp/services-list-img-4.png", alt="")
+                    span.services__block-title Флеболог
+
       // About
       .about
         .container
