--- a/_gulp/_scss/3-modules/_modules.scss
+++ b/_gulp/_scss/3-modules/_modules.scss
@@ -3821,9 +3821,7 @@
   }
 }
 
-.about {
-  background: #EEEBEB;
-}
+
 
 .view {
   background: transparent;
@@ -4344,5 +4342,202 @@
 .slick-slide {
   &:focus {
     outline: none;
+  }
+}
+
+.services {
+  h2, .h2 {
+    font-size: rem(36px);
+    position: relative;
+    margin-bottom: 30px;
+    &::before {
+      width: 248px;
+      height: 6px;
+      background-color: #f1e1d5;
+      position: absolute;
+      left: -5px;
+      top: 29px;
+      content: '';
+      z-index: -1;
+    }
+  }
+  &__bottom {
+    position: relative;
+    &>.container-fluid {
+      padding-right: 0;
+    }
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 112px;
+      bottom: 56px;
+      background: $add-color;
+    }
+  }
+  &__carousel {
+    .slick-slide {
+      width: 280px;
+      margin-right: 22px;
+    }
+    .slick-arrow {
+      width: auto;
+      height: auto;
+      font-size: 0;
+      z-index: 10;
+      &::before {
+        opacity: 0.5;
+        font-family: $font-icomoon;
+        font-size: rem(40px);
+      }
+      &:hover {
+        &::before {
+          opacity: 1;
+        }
+      }
+    }
+    .slick-prev {
+      left: -10px;
+      &::before {
+        content: '\e90c';
+      }
+    }
+    .slick-next {
+      right: 0px;
+      &::before {
+        content: '\e90b';
+      }
+    }
+  }
+  &__block {
+    position: relative;
+    a {
+      text-decoration: none;
+    }
+    img {
+      width: 280px;
+      height: 280px;
+      object-fit: contain;
+    }
+    &-title {
+      position: absolute;
+      z-index: 5;
+      bottom: 17px;
+      left: 0;
+      right: 0;
+      height: 37px;
+      line-height: 37px;
+      padding: 0 10px;
+      font-size: rem(20px);
+      background: rgba(241, 225, 213, 0.7);
+      color: $color-white;
+      &::after {
+        content: '\e916';
+        position: absolute;
+        right: 10px;
+        font-family: $font-icomoon;
+        font-size: rem(21px);
+      }
+    }
+  }
+  @include media-breakpoint-up(md) {
+    .h2, h2 {
+      margin-bottom: 35px;
+      &::before {
+        height: 7px;
+        width: 326px;
+      }
+    }
+    &__block {
+      img {
+        width: 539px;
+        height: 299px;
+      }
+      &-title {
+        height: 44px;
+        line-height: 44px;
+        font-size: rem(20px);
+        bottom: 20px;
+      }
+    }
+    &__carousel {
+      .slick-slide {
+        width: 302px;
+        margin-right: 26px;
+      }
+    }
+    &__bottom {
+      &::before {
+        top: 97px;
+        bottom: 61px;
+      }
+    }
+  }
+  @include media-breakpoint-up(lg) {
+    padding-bottom: 80px;
+  }
+  @include media-breakpoint-up(xl) {
+    padding-bottom: 0;
+    .h2, h2 {
+      text-align: center;
+      font-size: rem(64px);
+      margin-bottom: 40px;
+      &::before {
+        height: 14px;
+        width: 791px;
+        left: 50%;
+        transform: translateX(calc(-100% + 220px));
+        top: 50px;
+      }
+    }
+    &__block {
+      img {
+        width: 539px;
+        height: 534px;
+      }
+      &-title {
+        height: 78px;
+        line-height: 78px;
+        font-size: rem(30px);
+        bottom: 35px;
+        &::after {
+          font-size: rem(43px);
+          opacity: 0.4;
+        }
+      }
+    }
+    &__carousel {
+      .slick-slide {
+        width: 539px;
+        margin-right: 43px;
+      }
+      .slick-arrow {
+        &::before {
+          font-size: rem(80px);
+        }
+      }
+    }
+    &__bottom {
+      &::before {
+        top: 165px;
+        bottom: 114px;
+      }
+    }
+  }
+}
+
+.about {
+  background: #EEEBEB;
+  overflow: hidden;
+  padding-top: 40px;
+  padding-bottom: 75px;
+  @include media-breakpoint-up(md) {
+    padding-top: 75px;
+    padding-bottom: 90px;
+  }
+  @include media-breakpoint-up(xl) {
+    padding-top: 85px;
+    padding-bottom: 106px;
   }
 }
