--- a/_gulp/_pug/index.pug
+++ b/_gulp/_pug/index.pug
@@ -22,6 +22,35 @@ html(lang="ru")
         .container
           h2 Наши преимущества
 
+
+          .advantages__row
+            .advantages__img
+              img(src="./tmp/advantages-img.png", alt="")
+            .advantages__block
+              img(src="./tmp/advantages-img-1.svg", alt="")
+              p Более 10 лет опыта в мире стиля и красоты
+            .advantages__block
+              img(src="./tmp/advantages-img-2.svg", alt="")
+              p Мастера, которые влюблены в свое дело
+            .advantages__block
+              img(src="./tmp/advantages-img-3.svg", alt="")
+              p Высокая квалификация врачей и специалистов
+            .advantages__block
+              img(src="./tmp/advantages-img-4.svg", alt="")
+              p Мы работаем с ведущими косметическими брендами
+            .advantages__block
+              img(src="./tmp/advantages-img-5.svg", alt="")
+              p Сертифицированное оборудование последнего поколения
+            .advantages__block
+              img(src="./tmp/advantages-img-6.svg", alt="")
+              p Для нашего гостя мы делаем все, чтобы он чувствовал себя окруженным заботой
+            .advantages__block
+              img(src="./tmp/advantages-img-7.svg", alt="")
+              p Удобное расположение: 5 мин пешком от метро
+            .advantages__block
+              img(src="./tmp/advantages-img-8.svg", alt="")
+              p Бесплатная парковка
+
       // Services
       .services
         .container
