--- a/_gulp/_pug/index.pug
+++ b/_gulp/_pug/index.pug
@@ -48,7 +48,7 @@ html(lang="ru")
       
       // Advantages
       .advantages
-        .container
+        .container.advantages__container
           h2 Наши преимущества
           .advantages__row
             .advantages__img
@@ -130,7 +130,7 @@ html(lang="ru")
 
       // About
       .about
-        .container
+        .container.about__container
           .d-xl-none
             h2 О нас
 
