--- a/_gulp/_scss/1-base/_font.scss
+++ b/_gulp/_scss/1-base/_font.scss
@@ -6,6 +6,7 @@
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.eot'); /* IE9 Compat Modes */
   src: local('Montserrat Regular'), local('Montserrat-Regular'),
        url('../fonts/montserrat/montserrat-v14-latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -19,6 +20,7 @@
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 500;
+  font-display: swap;
   src: url('../fonts/montserrat/montserrat-v14-latin_cyrillic-500.eot'); /* IE9 Compat Modes */
   src: local('Montserrat Medium'), local('Montserrat-Medium'),
        url('../fonts/montserrat/montserrat-v14-latin_cyrillic-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -32,6 +34,7 @@
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.eot'); /* IE9 Compat Modes */
   src: local('Montserrat Bold'), local('Montserrat-Bold'),
        url('../fonts/montserrat/montserrat-v14-latin_cyrillic-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -45,6 +48,7 @@
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 800;
+  font-display: swap;
   src: url('../fonts/montserrat/montserrat-v14-latin_cyrillic-800.eot'); /* IE9 Compat Modes */
   src: local('Montserrat ExtraBold'), local('Montserrat-ExtraBold'),
        url('../fonts/montserrat/montserrat-v14-latin_cyrillic-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -59,6 +63,7 @@
   font-family: 'Cormorant Unicase';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-regular.eot'); /* IE9 Compat Modes */
   src: local('Cormorant Unicase Regular'), local('CormorantUnicase-Regular'),
        url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -72,6 +77,7 @@
   font-family: 'Cormorant Unicase';
   font-style: normal;
   font-weight: 600;
+  font-display: swap;
   src: url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-600.eot'); /* IE9 Compat Modes */
   src: local('Cormorant Unicase SemiBold'), local('CormorantUnicase-SemiBold'),
        url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -85,6 +91,7 @@
   font-family: 'Cormorant Unicase';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-700.eot'); /* IE9 Compat Modes */
   src: local('Cormorant Unicase Bold'), local('CormorantUnicase-Bold'),
        url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -92,4 +99,104 @@
        url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-700.woff') format('woff'), /* Modern Browsers */
        url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-700.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/cormorant-unicase/cormorant-unicase-v8-latin_cyrillic-700.svg#CormorantUnicase') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon/fonts/icomoon.eot?1iajmv');
+  src:  url('../fonts/icomoon/fonts/icomoon.eot?1iajmv#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon/fonts/icomoon.ttf?1iajmv') format('truetype'),
+    url('../fonts/icomoon/fonts/icomoon.woff?1iajmv') format('woff'),
+    url('../fonts/icomoon/fonts/icomoon.svg?1iajmv#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-arrow-right-3:before {
+  content: "\e916";
+}
+.icon-arrow-left-small:before {
+  content: "\e914";
+}
+.icon-arrow-right-small:before {
+  content: "\e915";
+}
+.icon-arrow-right-2:before {
+  content: "\e912";
+}
+.icon-arrow-left-2:before {
+  content: "\e913";
+}
+.icon-quote-up:before {
+  content: "\e910";
+}
+.icon-quote-down:before {
+  content: "\e911";
+}
+.icon-check-bold:before {
+  content: "\e90d";
+}
+.icon-plus-bold:before {
+  content: "\e90e";
+}
+.icon-arrow-right:before {
+  content: "\e90a";
+}
+.icon-arrow-left:before {
+  content: "\e90f";
+}
+.icon-services-icon-2:before {
+  content: "\e903";
+}
+.icon-services-icon-3:before {
+  content: "\e904";
+}
+.icon-services-icon-4:before {
+  content: "\e905";
+}
+.icon-services-icon-5:before {
+  content: "\e906";
+}
+.icon-services-icon-6:before {
+  content: "\e907";
+}
+.icon-services-icon-7:before {
+  content: "\e908";
+}
+.icon-services-icon-1:before {
+  content: "\e909";
+}
+.icon-check:before {
+  content: "\e900";
+}
+.icon-close:before {
+  content: "\e901";
+}
+.icon-menu:before {
+  content: "\e902";
+}
+.icon-arrow-down:before {
+  content: "\1f447";
+}
+.icon-arrow-right2:before {
+  content: "\e90b";
+}
+.icon-arrow-left2:before {
+  content: "\e90c";
 }
