--- a/_gulp/_scss/2-layout/_header.scss
+++ b/_gulp/_scss/2-layout/_header.scss
@@ -210,14 +210,15 @@
     }
   }
   @include media-breakpoint-up(xl) {
-    padding-top: 40px;
+    padding-top: 20px;
     padding-bottom: 0;
     position: fixed;
     transition: all 0.35s;
     &__wrapper {
       flex-wrap: nowrap;
       align-items: center;
-      margin-bottom: 36px;
+      margin-bottom: 20px;
+      transition: all 0.35s;
     }
     &__logo {
       img {
@@ -259,10 +260,10 @@
       margin: 0;
     }
     &-holder {
-      height: 272px;
+      height: 212px;
     }
     &.is-scroll {
-      padding-top: 24px;
+      padding-top: 5px;
       padding-bottom: 0;
       .header {
         &__logo {
@@ -278,6 +279,26 @@
         }
         &__phones {
           padding-left: 0;
+        }
+        &__wrapper {
+          margin-bottom: 5px;
+        }
+      }
+    }
+  }
+  @include media-breakpoint-up(xxl) {
+    padding-top: 40px;
+    &__wrapper {
+      margin-bottom: 36px;
+    }
+    &-holder {
+      height: 272px;
+    }
+    &.is-scroll {
+      padding-top: 14px;
+      .header {
+        &__wrapper {
+          margin-bottom: 20px;
         }
       }
     }
